[gd_scene load_steps=3 format=3 uid="uid://jrm7xb15t80h"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_oauct"]
[ext_resource type="AudioStream" uid="uid://cv51d53tywuw7" path="res://assets/Nightmare Title Theme.mp3" id="2_72gyv"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oauct")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Title of Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_72gyv")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="startGamePressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="quitGamePressed"]
